--- a/style/style.css
+++ b/style/style.css
@@ -3,24 +3,29 @@ nav ul {
     justify-content: space-between;
     list-style-type: none;
 }
-img.logo2{
+img{
+    width:200px;
+}
+img.logo{
     width: 200px;
-
+}
+img.logo2{
+    width: 150px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+    
 }
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content:space-between;
     padding: 20px;
-    background-color: #fff;
-    border-bottom: 1px solid #ddd;
-    
     background-color: rgb(241, 241, 241);
-    
+    border-bottom: 1px solid #ddd;
 }
-
 nav {
     flex-grow: 1;
-    
     
 }
 nav ul li {
@@ -34,14 +39,11 @@ nav ul li a {
     font-weight: bold;
     
 }
-nav ul li{
-    display: flex;
-    justify-content: center;
-}
-
-a{
+a  {
     position: relative;
     top: 40px;
+    font-family:system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";;;
+    transform: scale(130%);
 }
 .sign_up{
     
@@ -65,4 +67,56 @@ footer{
 }
 html{
     background-color: rgb(241, 241, 241);
+}
+.signing{
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-top: 80px;
+    height: 400px;
+    width: 400px;
+    background-color: #efefef;
+    border-radius: 10px;
+}
+input{
+    
+    margin-bottom: 10px;
+}
+.sign_name{
+    height: 25px;
+    width: 250px;
+    border-radius: 7px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #ddd;
+}
+.sign_password{
+    height: 25px;
+    width: 250px;
+    border-radius: 7px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #ddd;
+}
+.submit{
+    margin-left: auto;
+    margin-right: auto;
+    width:100px;
+    height: 25px;
+    color: white;
+    border-radius: 7px;
+    background-color: rgb(0, 113, 200);
+    transform: scale(120%);
+    transition: box-shadow 2s 500ms;
+
+}
+.submit:hover{
+    box-shadow: 5px 5px 9px black;
+}
+p{
+    transform: scale(110%);
+    margin-left: 25%;
+    margin-top: 10px;
+    font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
