--- a/style/style.css
+++ b/style/style.css
@@ -84,6 +84,7 @@ input{
     height: 25px;
     width: 250px;
     border-radius: 7px;
+    margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
     background-color: #ddd;
@@ -100,13 +101,14 @@ input{
 .submit{
     margin-left: auto;
     margin-right: auto;
-    width:100px;
+    margin-top: 30px;
+    width:140px;
     height: 25px;
     color: white;
     border-radius: 7px;
     background-color: rgb(0, 113, 200);
-    transform: scale(120%);
-    transition: box-shadow 2s 500ms;
+    transform: scale(140%);
+    transition: box-shadow 1s 200ms;
 
 }
 .submit:hover{
@@ -117,4 +119,8 @@ p{
     margin-left: 25%;
     margin-top: 10px;
     font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+a p{
+    text-decoration: none;
+    transform: scale(110%);
 }
