--- a/style/style.css
+++ b/style/style.css
@@ -2,21 +2,25 @@ nav ul {
     display: flex;
     justify-content: space-between;
     list-style-type: none;
-    align-items: center; /* Align items vertically */
+    align-items: center; 
 }
+
 img {
     width: 190px;
 }
+
 a img.logo,
 a img {
-    width: 190px; /* Adjust the width to make the image smaller */
+    width: 190px; 
 }
+
 img.logo2 {
     width: 150px;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
+
 header {
     display: flex;
     justify-content: space-between;
@@ -24,43 +28,54 @@ header {
     background-color: rgb(241, 241, 241);
     border-bottom: 1px solid #ddd;
 }
+
 nav {
     flex-grow: 1;
 }
+
 nav ul li {
     margin-left: 30px;
 }
+
 nav ul li a {
     text-decoration: none;
     color: #333;
     font-weight: bold;
 }
+
 a {
     position: relative;
     font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     transform: scale(130%);
 }
+
 .sign_up {
     display: flex;
     justify-content: center;
     background-image: url(../assets/image/bg-sing_up.jpg);
     background-size: cover;
 }
+
 .sign {
     height: 600px;
 }
+
 .promo {
     display: flex;
 }
+
 .promo.promo-img {
     display: flex;
 }
+
 footer {
     background-color: rgb(241, 241, 241);
 }
+
 html {
     background-color: rgb(241, 241, 241);
 }
+
 .signing {
     display: flex;
     flex-direction: column;
@@ -71,9 +86,11 @@ html {
     background-color: #efefef;
     border-radius: 10px;
 }
+
 input {
     margin-bottom: 10px;
 }
+
 .sign_name {
     height: 25px;
     width: 250px;
@@ -83,6 +100,7 @@ input {
     margin-right: auto;
     background-color: #ddd;
 }
+
 .sign_password {
     height: 25px;
     width: 250px;
@@ -92,6 +110,7 @@ input {
     margin-right: auto;
     background-color: #ddd;
 }
+
 .submit {
     margin-left: auto;
     margin-right: auto;
@@ -104,16 +123,129 @@ input {
     transform: scale(140%);
     transition: box-shadow 1s 200ms;
 }
+
 .submit:hover {
     box-shadow: 5px 5px 9px black;
 }
+
 p {
     transform: scale(110%);
     margin-left: 25%;
     margin-top: 10px;
     font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
 a p {
     text-decoration: none;
     transform: scale(110%);
+}
+
+/* Адаптивные стили */
+@media (max-width: 768px) {
+    nav ul {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    nav ul li {
+        margin: 10px 0;
+    }
+
+    .sign_up {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .sign {
+        width: 90%;
+        margin: 20px auto;
+    }
+
+    .signing {
+        width: 100%;
+        height: auto;
+        margin-top: 20px;
+    }
+
+    .sign_name, .sign_password {
+        width: 90%;
+    }
+
+    .submit {
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 30px;
+        width: 140px;
+        height: 25px;
+        color: white;
+        border-radius: 7px;
+        background-color: rgb(0, 113, 200);
+        transform: scale(140%);
+        transition: box-shadow 1s 200ms;
+    }
+    
+    .submit:hover {
+        box-shadow: 5px 5px 9px black;
+    }
+
+    p {
+        margin-left: 0;
+        text-align: center;
+    }
+
+    a p {
+        text-align: center;
+    }
+}
+
+@media (max-width: 480px) {
+    nav ul {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    nav ul li {
+        margin: 5px 0;
+    }
+
+    .sign {
+        width: 95%;
+        margin: 10px auto;
+    }
+
+    .signing {
+        width: 100%;
+        height: auto;
+        margin-top: 10px;
+    }
+
+    .sign_name, .sign_password {
+        width: 95%;
+    }
+
+    .submit {
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 30px;
+        width: 140px;
+        height: 25px;
+        color: white;
+        border-radius: 7px;
+        background-color: rgb(0, 113, 200);
+        transform: scale(140%);
+        transition: box-shadow 1s 200ms;
+    }
+    
+    .submit:hover {
+        box-shadow: 5px 5px 9px black;
+    }
+
+    p {
+        margin-left: 0;
+        text-align: center;
+    }
+
+    a p {
+        text-align: center;
+    }
 }
